[workspace]
resolver = "2"
members = [ "dirs-utils", "network-utils","nyanpasu-utils", "os-utils"]

[workspace.package]
edition = "2024"
license = "GPL-3.0"
authors = ["LibNyanpasu"]
repository = "https://github.com/LibNyanpasu/nyanpasu-utils"

[workspace.dependencies]
thiserror = "2"
log = "0.4"
parking_lot = "0.12.3"
simd-json = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-attributes = "0.1"
futures = "0.3.30"
futures-util = "0.3"
