[package]
name = "dirs-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dirs = "5"
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell"] }
