[package]
name = "nyanpasu-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["core_manager", "dirs", "serde", "network"]
core_manager = ["os", "dep:os_pipe", "dep:encoding_rs", "dep:shared_child"]
dirs = ["dep:dirs-utils"]
network = ["dep:network-utils"]
serde = ["dep:serde"]
os = ["dep:kill_tree", "dep:sysinfo", "dep:os-utils"]
deadlock_detection = ["parking_lot/deadlock_detection"]
specta = ["dep:specta"]

[dependencies]
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tokio = { workspace = true }
parking_lot.workspace = true
thiserror = { workspace = true }
derive_builder = "0.20"
os_pipe = { version = "1.2.0", optional = true }
encoding_rs = { version = "0.8", optional = true }
memchr = "2.7"
shared_child = { version = "1", optional = true }
dirs-utils = { path = "../dirs-utils", optional = true }
os-utils = { path = "../os-utils", optional = true }
network-utils = { path = "../network-utils", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
constcat = "0.6.0"
kill_tree = { version = "0.2.4", features = ["tokio"], optional = true }
sysinfo = { version = "0.33", optional = true }
specta = { version = "^2.0.0-rc.22", optional = true, features = ["derive"] }
