[package]
name = "os-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["shared_child"]
shared_child = ["dep:shared_child"]

[dependencies]
shared_child = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"